--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,13 +110,14 @@ Forests are vertically and horizontally stratified, with trees of different size
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davis_microclimatic_2019].**
 
 The structure of canopies and understories are changing due to unprecedented disturbance rates thus having feedbacks to forest structure and climate change.
-The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestaion, fire and related disruptions, which may contribute to increasing tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015].With increasing temperatures, temperate and tropical forest canopies will be soon or are already functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019].Additionally,larger trees suffer more during drought [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a].The increase in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] is also associated with reductions in canopy structural complexity, and altered microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
+The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestaion, fire and related disruptions, which may contribute to increasing tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015].With increasing temperatures, temperate and tropical forest canopies will be soon or are already functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, larger trees suffer more during drought [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. The increase in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] is also associated with reductions in canopy structural complexity, and altered microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-Increase in microclimatic temperatures as a consequence of macroclimate warming is causing thermophilization in plant communities, reshuffling of species acclimated to cooler [mean annual] temperatures in the understory [@zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]and reduced tree growth rates, driving a global trend towards disquillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008] with potential feedbacks to climate change.
+Increase in microclimatic temperatures as a consequence of macroclimate warming is causing thermophilization in plant communities, reshuffling of species acclimated to cooler [mean annual] temperatures in the understory [@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]and reduced tree growth rates, driving a global trend towards disquillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008] with potential feedbacks to climate change.
 
 (Marielle--"Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020)".) 
 
 With such changing in forest dynamics, it is becoming more important than ever to understand thermal sensitivity of forests along the vertical canopy profile, from the understory to the top of the canopy, this will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
+
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
 
@@ -160,18 +161,18 @@ The vertical structure and hence, microenvironments of forest canopies vary seas
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season but excluding periods (in deciduous forests) when no leaves are present.
 
 
-Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure and across species [Koike et al. 2000] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light to canopy interiors and lower canopy layers[@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
+Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure and across species [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light to canopy interiors, lower canopy layers and understories [@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
- Tropical forests with dense overstory limit light to understories that receive 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; Chazdon & Fetcher 1984; Parker et al. 2019], temperate forests with broad-leaf overstories generally receive .... in the understory [ REF ], whereas conifer forest understories receive [ ] of light [REF]
-This difference in light regime is an important variable that drives plasticity among leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008].Upper canopy leaves adapted to high irradiance have different leaf traits and thermal sensitivity strategies compared to deeply shaded understory, canopy interiors, and in canopy gaps. This is discussed further below under Leaf Traits.
+ Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005]
+This difference in light regime along a vertical profile is an important driver of plasticity among leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008].Upper canopy leaves adapted to high irradiance have different leaf traits and thermal sensitivity strategies compared to leaves in deeply shaded understory, canopy interiors, and in canopy gaps. This is discussed further below under Leaf Traits.
 
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
-Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [e.g., REFS; @mcgregor_tree_nodate] and open savannas (Curtis et al. 2018).
-This results in higher boundary layer conductance ($g_{a}$) for canopy leaves. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$ [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a] Additionally, boundary layer resistance is proportional to thickness of air layer at the surface of the leaf through which water vapor diffuses after leaving the stomata;($g_{a}$) also depends on leaf traits, morphology and windspeed.Generally, larger leaf width increases boundary layer resistance, and thus having important implications for leaf thermal sensitivity.[@michaletzEnergeticCarbonEconomic2016]*double check*
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
+This results in higher boundary layer conductance ($g_{a}$) for canopy leaves. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$ [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; stocks et al. 2006]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. Generally, larger leaf width increases boundary layer resistance [ implications of thermal sensitivity].[@michaletzEnergeticCarbonEconomic2016]*double check*
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
@@ -228,12 +229,12 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-[when I think of shade leaves in the understory there are three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on which category of shade plants we're talking about. I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.]
+[when I think of shade leaves in the understory there are three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on which category of shade plants we're talking about. I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.
 
 in line with Marielle's comment below; it will be important to distinguish between within plant variation vs across species variation. Understory species may have conservative  growth strategies because they are resource (light) limited. Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
-They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well
+They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well]--Martijn Slot
 
-Leaf traits are shaped by intra canopy light and height, and show intracanopy plasticity with availability of light. Taller trees tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory. Higher irradiance has consequential adaptations in leaf morphology with smaller leaf area index in exposed canopies than shaded lower canopy or canopy interior, and well as having deeper leaf lobes in species such as Quercus. R. The table above summarizes the variation of different traits based on light regime, however, some of the traits might differ between species along the vertical profile, thus also varying in leaf thermal sensitivity. [Sack et al. 2016]
+Leaf traits are shaped by intra canopy light and height, and show intracanopy plasticity with availability of light. Taller trees tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory. Higher irradiance has consequential adaptations in leaf morphology with smaller leaf area index in exposed canopies than shaded lower canopy or canopy interior, and well as having deeper leaf lobes in species such as Quercus. rubra. The table above summarizes the variation of different traits based on light regime, however, some of the traits might differ between species along the vertical profile, thus also varying in leaf thermal sensitivity. [Sack et al. 2016]
 
 Additionally, passing light spots in the forest understory often caused by over canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves, making them efficient in capturing 50% of light through sunflecks for photosynthesis.
 
